# rouen

./: .gitignore  CMakeLists.txt  IMGUI_WARNING_FIX.md  LICENSE  README.md  fix_all_imgui_paths.sh  fix_duplicated_paths.sh  fix_imgui_path_problems.sh  fix_imgui_paths.sh  improved_imgui_includes.sh  podcasts.txt  presets.txt  search_result.json  tunnel-service.sh  update_imgui_includes.sh
.github/: copilot-instructions.md
cmake/: Info.plist.in  dependencies.cmake  linux.cmake  macos.cmake  warnings.cmake
img/: Rouen.xcf
samples/: 05.json
src/: fonts.cpp  fonts.hpp  main_wnd.cpp  main_wnd.hpp  registrar.hpp  rouen.cpp
src/cards/: README.md  card.hpp  deck.hpp  editor.hpp  envvars.hpp  factory.hpp  fs-directory.hpp  git.hpp  grok.hpp  menu.hpp  pomodoro.hpp  radio.hpp  rss.hpp  rss_feed.hpp  rss_item.hpp  sysinfo.hpp
src/cards/animation/: base.hpp  slide.hpp
src/cards/development/: cmake.hpp  fs-directory.hpp  git.hpp  github.hpp  github_register.cpp  github_registrar.cpp
src/cards/development/github/: github_card.hpp  login_screen.hpp  repo_screen.hpp
src/cards/information/: grok.hpp  rss.hpp  rss_feed.hpp  rss_item.hpp  travel.hpp  travel_plan.hpp  weather.hpp
src/cards/information/calendar/: calendar.hpp
src/cards/information/mail/: mail.hpp  mail_screen.hpp
src/cards/interface/: card.hpp  deck.hpp  factory.hpp  menu.hpp
src/cards/media/: chess_com_integration.cpp  chess_com_integration.hpp  chess_com_registrar.cpp  chess_replay.hpp  radio.hpp
src/cards/productivity/: alarm.hpp  dummy_jira_card.hpp  editor.hpp  jira.hpp  jira_card.hpp  jira_projects.hpp  jira_registrar.cpp  jira_search.hpp  jira_search_dummy.hpp  jira_ui_components.hpp  pomodoro.hpp
src/cards/productivity/legacy/: editor.hpp
src/cards/system/: dbrepair.hpp  envvars.hpp  subnet_scanner.hpp  sysinfo.hpp  terminal.hpp
src/editor/: editor.hpp  editor_interface.hpp  image_editor.hpp  text_editor.hpp
src/helpers/: README.md  api_keys.hpp  capture_helper.cpp  capture_helper.hpp  chess_com_api.hpp  cppgpt.hpp  date_picker.hpp  debug.hpp  deferred_operations.hpp  email_metadata_analyzer.hpp  fetch.hpp  image_cache.hpp  imgui_helper.hpp  imgui_include.hpp  media_player.hpp  mpv_socket.hpp  notify_service.hpp  platform_utils.hpp  process_helper.hpp  sqlite.hpp  sqlite_keyvalue.hpp  string_helper.hpp  texture_helper.hpp
src/helpers/compat/: compat.hpp  format_fixes.hpp  jthread.hpp  sysinfo.hpp
src/helpers/imgui_compat/: imgui_key_adapter.hpp
src/helpers/views/: json_view.hpp
src/hosts/: README.md  rss_host.hpp  travel_host.hpp  weather_host.hpp
src/models/: README.md  git.hpp  jira_model.cpp  jira_model.hpp  radio.hpp
src/models/calendar/: calendar_fetcher.hpp  event.hpp  sample.json
src/models/chess/: chess.hpp
src/models/github/: host.hpp  login_host.hpp
src/models/mail/: email_metadata.hpp  imap_host.hpp  message.hpp  metadata_repo.hpp
src/models/rss/: feed.hpp  host.hpp  sqliterepo.hpp
src/models/travel/: plan.hpp  sqliterepo.hpp
